<resources>
    <string name="my_app_name">Ineed Ihave</string>
    <string name="splash_motive1">Find best clients!</string>
    <string name="splash_motive2">Find real bargains!</string>
    <string name="start_phone_auth">Send me code</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend Me Code</string>
    <string name="cancel">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="OK">OK</string>
    <string name="Download_VPN_OK">Download a VPN</string>
    <string name="Download_VPN_NO">No,thanks.</string>
    <string name="phone_auth_save_and_proceed">Save and proceed</string>
    <string name="phone_auth_ignore">Ignore and proceed</string>
    <string name="ignore">Ignore</string>
    <string name="add">Add</string>
    <string name="add_alert">Add Alert</string>
    <string name="label_add_item_ineed">new "Ineed" item</string>
    <string name="label_add_item_ihave">new "Ihave" item</string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="label_firebase_ui">UI Auth</string>
    <string name="label_sign_in_methods">Choose your favorite sign in method</string>
    <string name="label_sign_in_method_phone">Sign in with your phone number:</string>
    <string name="label_sign_in_method_google">Sign in with your Google account:</string>
    <string name="label_sign_in_method_email">Sign in with your already created account  e-mail and password :</string>
    <string name="label_sign_up">click her to sign up</string>
    <string name="label_sign_in_eml_pss">Please enter your already-created account information:</string>
    <string name="label_sign_up_eml_pss">Please complete the following form  to create a new account:</string>
    <string name="label_ask_for_resend_code">No code received ?</string>
    <string name="label_set_up_contact_info">Please use the following form to add or modify your \" Contact Information \"  that other users use to contact with you:</string>
    <string name="label_add_dispaly_image">Click above to add an avatar</string>
    <string name="label_phone_auth_details">details</string>
    <string name="label_phone_details">Details:</string>
    <string name="label_current_status">Current status:</string>
    <string name="label_search_criteria">Choose city/category then press "Refersh":</string>
    <string name="label_sign_up_phone_number_enter_code">Please enter the verification code we have just sent to the provided number:</string>
    <string name="label_sign_in_google_explaining">If you already have a google account you can use it to sign in by clicking on the following button. \n Otherwise, you will be involved in creating a new one.</string>
    <string name="label_item_single_desc_for_sale">The following item is for sale. In case you are interested in it, you can contact with the one who added it via email or phone.</string>
    <string name="label_item_single_desc_wanted">The following item is wanted. In case you are interested in it, you can contact with the one who added it with phone or email.</string>
    <string name="label_item_details">Details:</string>
    <string name="label_email_to_item_user">Send email using…</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_edit_item">Edit item</string>
    <string name="action_remove">Remove item</string>
    <string name="action_sort_by">Sort by</string>
    <string name="action_add_alert">Add alert</string>
    <string name="action_save">Save Item</string>
    <string name="action_sort_by_price">sort by price</string>
    <string name="action_sort_by_title">sort by title</string>
    <string name="action_sort_by_date">sort by date</string>
    <string name="sign_in_phone_number">Sign in with Phone Number</string>
    <string name="title_set_up_contact_info">Set Up Your \" Contact Information \"</string>
    <string name="title_tap_0">I NEED</string>
    <string name="title_tap_1">I HAVE</string>
    <string name="title_ineed">I need</string>
    <string name="title_ihave">I have</string>
    <string name="title_activity_main">Ihave Ineed Items</string>
    <string name="title_fragment_confirm_delete">Delete Item</string>
    <string name="title_fragment_VPN_alert">VPN app might be needed! </string>
    <string name="title_fragment_add_alert"> Please alert me whenever:</string>
    <string name="title_subscribe">Create customized alert</string>
    <string name="title_activity_my_items">My Items</string>
    <string name="title_item_details">Item Details</string>
    <string name="title_extra_info">Details:</string>
    <string name="title_network_con_not_found">No Network Connection Found!</string>
    <string name="title_my_items">My Items</string>
    <string name="title_sign_in_eml_pss">Sign in with Your E-mail and Password</string>
    <string name="title_sign_in_google">Sign in with Google</string>
    <string name="title_main">Syria</string>
    <string name="title_sign_in_or_sign_up">Sign in or Sign up</string>
    <string name="title_sign_in_phone">Sign In with Your Phone Number</string>
    <string name="title_add_item">Add New Item</string>
    <string name="title_add_ihave_item">Add \"I have\" item</string>
    <string name="title_add_ineed_item">Add \"I need\" item</string>
    <string name="title_sort_ineed_item">Sort \"I need\" items</string>
    <string name="title_sort_ihave_item">Sort \"I have\" items</string>
    <string name="title_SIGN_IN">Sign in</string>
    <string name="title_SIGN_UP">Sign up</string>
    <string name="title_email_to_item_user">From Ineed Ihave App: As to the item %s\n</string>
    <string name="title_nav_manage_items">Manage Items</string>
    <string name="title_nav_add_items">Add items</string>
    <string name="title_nav_sort_items">Sort items</string>
    <string name="message_info_PLEASE_WAIT">Please wait, it might take some time depending on your network connection speed…</string>
    <string name="message_info_network_con_check">Please check your network connection, and/or the VPN app</string>
    <string name="message_info_error_auth_failed">Authentication failed</string>
    <string name="message_info_error_no_email">Sorry!This user has no email address added!\n Please you can contact with him by phone number.</string>
    <string name="message_info_error_no_image">Sorry!This item has no image to display!</string>
    <string name="message_info_error_no_phone_number">Sorry!This user has no phone number added!\n Please you can contact with him by email.</string>
    <string name="message_info_ok_status_code_sent">Code Sent</string>
    <string name="message_info_error_status_verification">Failed</string>
    <string name="message_info_ok_status_verification">Succeeded</string>
    <string name="message_info_error_status_sign_in">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="message_info_Authenticating">Authenticating</string>
    <string name="message_info_signing_out">Signing out…Please check Network and/or VPN app</string>
    <string name="message_info_UPDATING_CONTACT_INFO">Updating Contact Information…</string>
    <string name="message_error_required_fields">Fields with * are required.</string>
    <string name="message_error_no_cat_selected">No category selected</string>
    <string name="message_info_uploaded_ok">OK uploaded</string>
    <string name="message_info_added_error"> Error: Adding Item failed!</string>
    <string name="message_info_added_ok">Item has been added successfully</string>
    <string name="message_info_added_ok_alert">Your alert has been added successfully</string>
    <string name="message_info_refreshed_ok">Refreshed!</string>
    <string name="message_info_item_saved_ok">Item saved to gallery as image its name is:\n title and price of item</string>
    <string name="message_info_upload_error"> Error: Uploading Image failed!</string>
    <string name="message_error_empty_field">Field(s) cannot be empty!</string>
    <string name="message_error_phone_number">Invalid phone number.</string>
    <string name="message_info_item_remove">Item has been removed successfully</string>
    <string name="message_error_sign_in">Signing in problems!</string>
    <string name="message_error_sign_in_google">Signing with Google faild!</string>
    <string name="message_error_invalid_code">Invalid code.</string>
    <string name="message_error_quota_exceeded">Quota exceeded.</string>
    <string name="message_error_invalid_number">Invalid phone number.</string>
    <string name="message_error_empty_items">You have never added any item!</string>
    <string name="message_info_item_saved_already">Item has already been saved to gallery</string>
    <string name="message_info_modified_ok">Item has been modified successfully</string>
    <string name="message_info_modifing_error">Error:Failed to modify item</string>
    <string name="message_info_SIGNING_UP">Signing up…</string>
    <string name="message_info_DELETING">Deleting…</string>
    <string name="message_info_MODIFYING">Modifying item…</string>
    <string name="message_info_ADDING_ITEM">Adding item…</string>
    <string name="message_info_loading">Loading…</string>
    <string name="message_info_LOADING_DATA">Loading data…</string>
    <string name="message_info_signed_in">Signed In</string>
    <string name="hint_user_name_contact_info">Display Name</string>
    <string name="hint_user_email_contact_info">Your Email…</string>
    <string name="hint_phone_number_contact_info">A phone number to contact with you…</string>
    <string name="hint_user_password">Password</string>
    <string name="desc_click_to_add_image">click to add userImage</string>
    <string name="menu_item_set_up_my_account">Set up My Account</string>
    <string name="sign_out">Sign out</string>
    <string name="SIGN_UP">Sign up</string>
    <string name="title_nav_my_notifications">My Notifications</string>
    <string name="title_nav_my_subscriptions">My Subscriptions</string>
    <string name="title_nav_add_alert">Add Alert</string>
    <string name="title_nav_update_loc">Update My Location</string>
    <string name="title_nav_my_items">My Items</string>
    <string name="title_nav_home">Home</string>
    <string name="title_nav_manage_alerts">Manage Alerts</string>
    <string name="action_title_notifications">Notifications</string>
    <string name="title_nav_download_vpn">Download VPN</string>
    <string name="title_nav_forget_me">Forget Me</string>
    <string name="title_nav_my_account">My Account</string>
    <string name="menu_item_edit_my_profile">Edit My Profile</string>
    <string name="message_info_fragment_report_user">A report containing the provided information will be sent directly to the Admin.</string>
    <string name="rb_inappropriate_content">Inappropriate Content</string>
    <string name="rb_misleading_fraud">Misleading or Fraud Content</string>
    <string name="rb_violence_bad_communication">Violence or Bad Communication.</string>
    <string name="action_report">Report Item</string>
    <string name="tv_report_feedbac">Please select a reason for reporting :</string>
    <string name="title_nav_my_favorites">My Favorites</string>
    <string name="title_nav_share_app">Share App</string>
    <string name="title_nav_app">Ineed Ihave App</string>
    <string name="title_nav_about_app">About App</string>
    <string name="title_nav_about_developer">About Developer</string>
    <string name="title_nav_rate_app">Rate App</string>
    <string name="title_nav_contact_us">Contact Us</string>
    <string name="developer_name">" Eng.Mohammed Youser Sawwas"</string>
    <string name="tv_all_rights">All Rights Reserved for:</string>
    <string name="app_version">Version 1.1 Beta</string>
</resources>