<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<group android:title="@string/action_sort_by" >

    <item
        android:id="@+id/action_sort_by_title"
        android:orderInCategory="100"
        android:title="@string/action_sort_by_title"
        app:showAsAction="never"
        android:actionLayout="@layout/spinner_dropdown_item"
        />
    <item
        android:id="@+id/action_sort_by_price"
        android:orderInCategory="100"
        android:title="@string/action_sort_by_price"
        app:showAsAction="never"
        android:actionLayout="@layout/spinner_dropdown_item"
        />
    <item
        android:id="@+id/action_sort_by_date"
        android:orderInCategory="100"
        android:title="@string/action_sort_by_date"
        app:showAsAction="never"
        android:actionLayout="@layout/spinner_dropdown_item"
        />
</group>

    <item android:title="@string/action_title_notifications"
        android:id="@+id/action_show_notifications"
        app:showAsAction="always"
        app:actionLayout="@layout/action_notification"
        />
    <item android:title=""
        android:id="@+id/action_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"/>





</menu>
