<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <item
        android:id="@+id/action_edit_item"
        android:orderInCategory="100"
        android:title="@string/action_edit_item"
        android:icon="@mipmap/ic_mode_edit_white_24dp"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_remove_item"
        android:title="@string/action_remove"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/ic_delete_forever_white_24dp"
       />
    <item
        android:id="@+id/action_save_item"
        android:title="@string/action_save"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/ic_save_white_24dp"
       />
    <item
        android:id="@+id/action_report_item"
        android:title="@string/action_report"
        app:showAsAction="always"
        android:icon="@drawable/ic_report"
       />
</menu>
