<androidx.core.widget.NestedScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:id="@+id/ll_search_criteria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"

            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:id="@+id/tv_label_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/message_info_fragment_report_user"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_des_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/tv_report_feedbac"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            >

                <RadioButton
                    android:id="@+id/rb_inappropriate_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:checked="true"
                    android:text="@string/rb_inappropriate_content" />

                <RadioButton
                    android:id="@+id/rb_misleading_fraud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:checked="false"
                    android:text="@string/rb_misleading_fraud" />

                <RadioButton
                    android:id="@+id/rb_violence_bad_communication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:checked="false"
                    android:text="@string/rb_violence_bad_communication" />
            </RadioGroup>


        </LinearLayout>


</androidx.core.widget.NestedScrollView>

