<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_contact_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:elevation="12dp"
        android:visibility="visible"
        android:padding="64dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/img_btn_developer_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="96dp"
            android:background="@drawable/background_user_image"
            app:srcCompat="@drawable/logo_green" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/font__logo"
            android:text="@string/my_app_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/font_muli"
            android:gravity="center"
            android:text="@string/app_version"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView_motivation1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/splash_motive1"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView_motivation2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="50dp"
            android:padding="5dp"
            android:text="@string/splash_motive2"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/font_muli_bold"
            android:gravity="center"
            android:text="@string/tv_all_rights"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/font_muli_bold"
            android:gravity="center"
            android:text="@string/developer_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.core.widget.NestedScrollView>

