<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:background="@color/colorPrimary"

    >

<LinearLayout

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="10dp"
    >

    <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"


                >


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="21dp"
                    android:background="@color/colorPrimary"
                    app:srcCompat="@drawable/icons_plus_24"

                    />

                <ImageButton
                    android:id="@+id/img_btn_user_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/desc_click_to_add_image"
                    android:elevation="5dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/ic_account_circle_white_24dp" />
            </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:orientation="vertical"

        >


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:hint="@string/hint_user_name_contact_info"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:counterOverflowTextAppearance="@style/TextAppearance.Design.Counter.Overflow"
            app:hintTextAppearance="@style/hintStyle">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_displayName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/background_input"
                android:inputType="textPersonName"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="10dp"


                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:gravity="bottom"
            android:hint="@string/hint_user_email_contact_info"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:counterOverflowTextAppearance="@style/TextAppearance.Design.Counter.Overflow"
            app:hintTextAppearance="@style/hintStyle"
            >


            <com.google.android.material.textfield.TextInputEditText


                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/background_input"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:padding="10dp"


                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:gravity="bottom"
            android:hint="@string/hint_user_password"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:counterOverflowTextAppearance="@style/TextAppearance.Design.Counter.Overflow"
            app:hintTextAppearance="@style/hintStyle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/background_input"
                android:inputType="textPassword"
                android:maxLength="15"
                android:maxLines="1"
                android:padding="10dp" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:gravity="bottom"
            android:hint="@string/hint_phone_number_contact_info"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:counterOverflowTextAppearance="@style/TextAppearance.Design.Counter.Overflow"
            app:hintTextAppearance="@style/hintStyle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_phone_number"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/background_input"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="10dp"

                />


        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/button_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_signin"
            android:text="@string/SIGN_UP"
            android:textColor="@color/sign_in" />

    </LinearLayout>
</LinearLayout>
</androidx.core.widget.NestedScrollView>

